...
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="320dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/nome"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:orientation="horizontal"
...
                android:layout_marginRight="10dp"
                android:text="Email:  "

                android:textColor="@color/black" />

            <EditText
                android:id="@+id/typed_email"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item1"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:gravity="center"
...
                android:layout_marginRight="10dp"
                android:text="Password: "

                android:textColor="@color/black" />

            <EditText
                android:id="@+id/typed_password"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/tamanho"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_border"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/confirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Confirmar Password: "

                android:textColor="@color/black" />

            <EditText
                android:id="@+id/typed_password2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </LinearLayout>
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="650dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Sign Up" />

    </LinearLayout>


    <!-- </LinearLayout>-->
</RelativeLayout>
