<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pedido.NovoPedidoFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:src="@drawable/mapa"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_client_home" />

    <LinearLayout
        android:id="@+id/recolha"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/recolha_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ponto de Recolha: "
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"

            android:textColor="@color/black" />

        <EditText
            android:id="@+id/recolha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/entrega"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/recolha">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ponto de Entrega: "
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"

            android:textColor="@color/black" />

        <EditText
            android:id="@+id/de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/avancar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Avancar"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrega" />
</androidx.constraintlayout.widget.ConstraintLayout>