...
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <androidx.cardview.widget.CardView
                android:id="@+id/mbway_card"
                android:layout_marginRight="15dp"
                android:layout_width="0dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_weight="33"
                app:cardCornerRadius="25dp"
                >

                    <ImageView
                        android:id="@+id/mbway"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:clickable="true"
                        android:elevation="12dp"
                        android:focusable="true"
...
